assets/styles/light/_preset.scss
@import '../materialize.scss';
@import './_switch-button.scss';

$main-theme: #6A1145;
$main-color: #fff;
$main-lightScroll: #e2c6d7;

body[theme=light] {
    background-color: $main-color;
    .black {
        background-color: $main-color !important;
    }
    #contact, footer {
        h6 {
            color: $main-theme !important;
        }
        p, p.white-text, li {
            color: #3d3b3b !important;
        }
    }
    img[alt="FrontEnd Mentor icon"] {
        border: solid 1px #3d3b3b;
    }
    .social a:hover {
        .svg-inline--fa {
            path {
               fill: #ffffff; 
            }
        }
    }
}
body[theme=light], body {
	font-size: 16px;
    .main.scrollspy {
        backdrop-filter: blur(81px);
    }
    .gradient_background {
        position: fixed;
        top: 0;
        bottom: 60%;
        right: 0;
        left: 0;
        background-image: linear-gradient(to left, #b37b9c, #9286b7, #6392bd, #449aad, #539d90);
        z-index: -1
    }
    .background {
        position: absolute;
        background: url('../../../public/images/background/desktop.webp') fixed no-repeat center;
        background-size: cover;
        width: 100%;
        height: 110vh;
        top: 0;
        opacity: .1;
    }
    .background::after {
        content: '';
        position:absolute;
        height: 200px;
        bottom: -100px;
        width: 100%;
        background: rgb(243,239,245);
        background: linear-gradient(0deg, rgba(243,239,245,0) 0%, rgba(243,239,245,1) 45%, rgba(243,239,245,1) 68%, rgba(243,239,245,0) 100%);
    }
    .purple.lighten-5 {
        background-color: transparent !important;
    }
    .btn.waves-effect {
        border-radius: 15px 0;
        transition: .3s ease-out;
    }
	&::-webkit-scrollbar, .modal::-webkit-scrollbar {
		width: 15px;
		background-color: $main-color;
	}
	&::-webkit-scrollbar-track, .modal::-webkit-scrollbar-track {
		background-color: $main-color;
	}
	&::-webkit-scrollbar-thumb, .modal::-webkit-scrollbar-thumb {
		background-color: $main-theme;
	}
    .flash_success {
        left: 50%;
        padding: 0 15px;
        position: fixed;
        top: 50%;
        transform: translateX(-50%);
        z-index: 999;
        #close_flash_message {
            background: #90caf9!important;
            color: #000!important;
            font-weight: bold;
            margin-left: 10px;
            padding: 0 10px!important;
        }
    }
    .grey.lighten-3 {
        background-color: rgba(0, 0, 0, 0.1) !important;
    }
    .container {
        margin: 0 auto;
    }
    .container:not(footer .container) {
        padding: 24px;
    }
    .blur {
        background-color: rgba(255,255,255,.04)!important;
        backdrop-filter: blur(81px);
    }
    .right-align {
        .sidenav-close {
            padding-top: 20px;
            display: inline-block;
        }
        .sidenav-close:hover {
            background: transparent !important;
        }
    }   
    nav {
        &.nav-hidden {
            &, .logo {
                transform: translate3d(0,-100%,0)
            }
        }
        i.far.fa-smile-wink {
            height: 15px !important;
            line-height: 1 !important;
        }
        height: 80px !important;
        line-height: 80px !important;
        -webkit-transition: all .3s;
        -o-transition: all .3s;
        transition: all .3s;
        a.sidenav-trigger {
            display: flex;
            svg {
                display: block;
                margin: auto;
                -webkit-box-shadow: 0px 0px 4px 0px #C4C4C4;
                box-shadow: 0px 0px 4px 0px #C4C4C4;
            }
        }
        ul {
            padding-right: 10px;
            a {
                &:hover {
                    background-color: transparent !important;
                }
            }
            .head-link, .rgpd-head-link {
                display: block;
                position: relative;
                &::after {
                    content: '';
                    position: absolute;
                    bottom: 39%;
                    left: 22px;
                    right: 0;
                    width: 80%;
                    margin: 0 auto;
                    height: 10px;
                    border-radius: 0 10px;
                    background-color: rgba($main-theme, .4);
                    opacity: 0;
                    -webkit-transition: opacity 500ms, -webkit-transform 500ms;
                    transition: opacity 500ms, -webkit-transform 500ms;
                    -o-transition: opacity 500ms, transform 500ms;
                    transition: opacity 500ms, transform 500ms;
                    transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
                    opacity: 1;
                    -webkit-transform: scale(0);
                    -ms-transform: scale(0);
                    transform: scale(0);
                    -webkit-transform-origin: left;
                    -ms-transform-origin: left;
                    transform-origin: left;
                }
                &:hover {
                    &::after {
                        opacity: 1;
                        -webkit-transform: translate3d(0, 0.2em, 0);
                        transform: translate3d(0, 0.2em, 0);
                        -webkit-transform: scale(1);
                        -ms-transform: scale(1);
                        transform: scale(1);
                    }
                }
            }
        }
    }
    .head-link.active, .rgpd-head-link.active {
        &::after {
            content: '';
            position: absolute;
            bottom: 39%;
            left: 22px;
            right: 0;
            width: 80%;
            margin: 0 auto;
            height: 10px;
            border-radius: 0 10px;
            background-color: rgba($main-theme, .4);
            opacity: 0;
            -webkit-transition: opacity 500ms, -webkit-transform 500ms;
            transition: opacity 500ms, -webkit-transform 500ms;
            -o-transition: opacity 500ms, transform 500ms;
            transition: opacity 500ms, transform 500ms;
            transition: opacity 500ms, transform 500ms, -webkit-transform 500ms;
            opacity: 1;
            -webkit-transform: translate3d(0, 0.2em, 0);
            transform: translate3d(0, 0.2em, 0);
            opacity: 1;
            -webkit-transform: scale(0);
            -ms-transform: scale(0);
            transform: scale(0);
            -webkit-transform-origin: left;
            -ms-transform-origin: left;
            transform-origin: left;
            -webkit-transform: scale(1);
            -ms-transform: scale(1);
            transform: scale(1);
        }
    }
    .card-panel {
        background: transparent;
    }
    .nav-icons {
        position: relative;
        margin-left: 15px;
    }
    .hidden {
        display: none;
    }
    a, p, span, ul, div {
        font-family: 'Josefin Sans', sans-serif;
    }
    h1, h2, h3, h4, h5, h6, .name, .job {
        font-family: "Qwigley", Helvetica, sans-serif;
        color: #9b9797;
        margin: 0;
    }
    h6 {
        padding: 0 0 20px 0;
    }
    .separator {
        font-weight: bold;
    }
    .logo {
        position: absolute;
        top: 20px;
        left: 50px;
        -webkit-transition: all .5s;
        -o-transition: all .5s;
        transition: all .5s;
        .logo_img_block {
            position: relative;
            height: 111px;
            .change_theme {
                position: absolute;
                width: 150px;
                top: 0;
                left: 25%;
                line-height: 1;
                padding: 10px;
                display: none;
            }
            img {
                &:hover ~ .change_theme, &:active ~ .change_theme {
                        display: block;
                }
            }
        }
    }
    .sidenav {
        li.row {
            .col.s6 {
                padding: 20px 32px;
                font-weight: 500;
            }
            a {
                &:hover {
                    background-color: transparent !important;
                }
            }
        }
        li {
            >a {
                font-family: 'Qwigley', cursive;
                font-size: 30px;
            }
        }
    }
    .nav {
        a {
            font-family: 'Qwigley', cursive;
            font-size: 30px;
        }
    }
    .line {
        fill: none;
        stroke: #f0f0f0;
        stroke-width: 6;
        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
    }
    .line1 {
        stroke-dasharray: 60 207;
        stroke-width: 6;
    }
    .line2 {
        stroke-dasharray: 60 60;
        stroke-width: 6;
    }
    .line3 {
        stroke-dasharray: 60 207;
        stroke-width: 6;
    }
}

